Fixed question body overflow.

--- a/src/main/resources/static/stylesheets/question.css
+++ b/src/main/resources/static/stylesheets/question.css
@@ -40,6 +40,10 @@ Main Question/Answer Block Style
 	padding-right: 15px;
 }
 
+.question > .main {
+    overflow: hidden;
+}
+
 /*
 =======================================
 Question/Answer Votes
